syntax = "proto3";

import "general.proto";
import "service.proto";
package proto;

service Deployment {
    rpc CreateDeployment (DeploymentService) returns (ServiceResponse) {}
    rpc DeleteDeployment (DeploymentService) returns (ServiceResponse) {}
    rpc GetDeployment (DeploymentService) returns (ServiceResponse) {}
    rpc PatchDeployment (DeploymentService) returns (ServiceResponse) {}
    rpc PutDeployment (DeploymentService) returns (ServiceResponse) {}
}

message DeploymentService {
    string project_id = 1;
    string service_id = 2;
    string name = 3;
    string version = 4;
    string service_type = 5;
    string service_sub_type = 6;
    string namespace = 7;
    string token = 8;
    string company_id = 9;
    DeploymentServiceAttributes service_attributes = 10;

}

message DeploymentServiceAttributes {
    map<string,EnvironmentVariable> environment_variables = 1;
    ImageRepositoryConfigurations image_repository_configurations = 2;
    map<string, ContainerPort> ports = 3;
    string tag = 4;
    string image_prefix = 5;
    string image_name = 6;
    IstioConfig istio_config = 7;
    LabelSelectorObj label_selector = 8;
    map<string, string> node_selector = 9;
    repeated string command = 10;
    repeated string args = 11;
    SecurityContextStruct security_context = 12;
    map<string, string> limit_resources = 13;
    map<string, string> request_resources = 14;
    map<string, string> labels = 15;
    map<string, string> annotations = 16;
    Probe liveness_probe = 17;
    Probe readiness_probe = 18;
    bool is_rbac_enabled = 19;
    repeated K8sRbacAttribute roles= 20;
    repeated IstioRbacAttribute istio_roles = 21;
    bool enable_init = 22;


}